2008-04-22  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes bug #529465

	* gui/component/GNOME_Evolution_Addressbook.server.in.in:
	Prefer "popup" to "pop-up" per the GNOME Documentation Style Guide.

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* gui/contact-editor/e-contact-editor.c: Do not include gnome-vfs.

2008-04-02  Matthew Barnes <mbarnes@redhat.com>

	* gui/widgets/Makefile.am:
	Remove CORBA rules for the old composer.

	* gui/widgets/eab-gui-util.c (eab_send_to_contact_and_email_num_list),
	(eab_send_contact_list_as_attachment):
	Adapt to new Bonobo-less composer widget.

2008-03-31  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #521562

	* gui/contact-editor/e-contact-editor-address.c: (countries []):
	Small typo fix.

2008-03-31  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #506347

	* gui/widgets/eab-contact-display.c:
	(eab_contact_display_render_compact):
	Inherit background colors from actual theme, do not use hardcoded one.

2008-03-31  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #404241

	* gui/widgets/e-minicard.c: (get_email_location), (add_email_field):
	* gui/widgets/eab-contact-display.c: (get_email_location):
	Never return NULL, rather return "Other" as default.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #438613

	* addressbook.error.xml:
	Improved "contact-delete-error-perm" secondary text.

2008-03-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #316572

	* gui/component/ldap-config.glade: Do not translate unused text.

2008-03-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #511952

	* gui/contact-list-editor/e-contact-list-editor.c:
	(contact_list_editor_create_name_selector):
	Marking text for translation.

2008-03-13  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #273177

	* gui/contact-editor/e-contact-quick-add.h:
	(e_contact_quick_add_vcard):
	* gui/contact-editor/e-contact-quick-add.c: (struct _QuickAdd),