@@ -1,3 +1,10 @@
+2008-04-23  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #529254
+
+	* e-util.c: (e_write_file_uri):	Save file properly.
+	Handle either URI or filename. Return success or failure, not gint.
+
 2008-04-22  Matthew Barnes  <mbarnes@redhat.com>
 
 	* Makefile.am:
